DW items: Crosslink to Blue Ribbon

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -2285,7 +2285,7 @@ credits: >
 	<d-box theme="battlemenu">
 		<d-text asterisk>[Character] used the SCARLIXIR!</d-text>
 	</d-box>
-	<p class="note">Heals the same amount as in the overworld. Notably, heal-buffing items like the Blue Ribbon don't buff Kris's 5 HP gain when the Scarlixir is used on Noelle.</p>
+	<p class="note">Heals the same amount as in the overworld. Notably, heal-buffing items like the <a href="{{ '/misc/equipment#blueribbon' | relative_url }}">Blue Ribbon</a> don't buff Kris's 5 HP gain when the Scarlixir is used on Noelle.</p>
 </section>
 
 
