--- a/misc/combat/rudinn.html
+++ b/misc/combat/rudinn.html
@@ -1,5 +1,5 @@
 ---
-title: Rudinn Encounter Dialogue
+title: Rudinn encounter
 description: >
   <p>Flavor text and dialogue for battles against Rudinn.</p>
 sources:
