Rudinn/Hathy encounter: Add Susie preconditions for Warning/S-Flatter

--- a/misc/combat/hathy.html
+++ b/misc/combat/hathy.html
@@ -153,6 +153,8 @@ credits: >
 	<hr>
 
 	<h3>Warning</h3>
+	<p>Available before Susie joins the party for real.</p>
+	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
 
 	<h4>When against a lone Hathy</h4>
@@ -170,6 +172,7 @@ credits: >
 	<hr>
 
 	<h3>S-Flatter</h3>
+	<p>Available after Susie joins the party for real.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You ordered Susie to flatter all the enemies!</d-text>
 	</d-box>
