--- a/misc/combat/rudinn.html
+++ b/misc/combat/rudinn.html
@@ -141,6 +141,8 @@ credits: >
 	<hr>
 
 	<h3>Warning</h3>
+	<p>Available before Susie joins the party for real.</p>
+	<p></p>
 	<p class="note">Susie's attacks will miss from now on.</p>
 
 	<h4>When against a lone Rudinn</h4>
