Change objbattle -> battledesc, make it gray
Same style is used for ACT descriptions/TP costs, so it's not an object-specific class

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -54,7 +54,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 40HP</d-text>
 	</d-box>
 
@@ -106,7 +106,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 120HP</d-text>
 	</d-box>
 
@@ -158,7 +158,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heal<span class="break"></span> Downed<span class="break"></span> Ally</d-text>
 	</d-box>
 
@@ -225,7 +225,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Sell<span class="break"></span> at<span class="break"></span> shops</d-text>
 	</d-box>
 
@@ -269,7 +269,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Read<span class="break"></span> out of<span class="break"></span> battle</d-text>
 	</d-box>
 
@@ -328,7 +328,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 20HP</d-text>
 	</d-box>
 
@@ -359,7 +359,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 160HP</d-text>
 	</d-box>
 
@@ -410,11 +410,11 @@ credits: >
 
 	<h4>In battle</h4>
 	<h5>Chapter 1</h5>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 80HP</d-text>
 	</d-box>
 	<h5>Chapter 2 onwards</h5>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 140HP</d-text>
 	</d-box>
 
@@ -457,7 +457,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 70HP</d-text>
 	</d-box>
 
@@ -512,7 +512,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 50HP</d-text>
 	</d-box>
 
@@ -559,7 +559,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 4HP</d-text>
 	</d-box>
 
@@ -614,7 +614,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 30HP</d-text>
 	</d-box>
 
@@ -656,7 +656,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -711,7 +711,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -767,7 +767,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> ALL HP</d-text>
 	</d-box>
 
@@ -815,7 +815,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 50 HP</d-text>
 	</d-box>
 
@@ -869,7 +869,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 80 HP</d-text>
 	</d-box>
 
@@ -922,7 +922,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Useless</d-text>
 	</d-box>
 
@@ -962,7 +962,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -1031,7 +1031,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -1100,7 +1100,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -1165,7 +1165,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -1229,7 +1229,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 10HP</d-text>
 	</d-box>
 
@@ -1276,7 +1276,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 60HP 2x</d-text>
 	</d-box>
 
@@ -1326,7 +1326,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 120HP</d-text>
 	</d-box>
 
@@ -1375,7 +1375,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 100HP</d-text>
 	</d-box>
 
@@ -1423,7 +1423,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 30HP</d-text>
 	</d-box>
 
@@ -1466,7 +1466,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Healing<span class="break"></span> varies</d-text>
 	</d-box>
 
@@ -1517,7 +1517,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Raises<span class="break"></span> TP<span class="break"></span> 32%</d-text>
 	</d-box>
 
@@ -1554,7 +1554,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Raises<span class="break"></span> TP<span class="break"></span> 50%</d-text>
 	</d-box>
 
@@ -1590,7 +1590,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Raises<span class="break"></span> TP<span class="break"></span> Max</d-text>
 	</d-box>
 
@@ -1626,7 +1626,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Revives<span class="break"></span> team<span class="break"></span> 25%</d-text>
 	</d-box>
 
@@ -1668,7 +1668,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Revives<span class="break"></span> team<span class="break"></span> 100%</d-text>
 	</d-box>
 
@@ -1709,7 +1709,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Hurts<span class="break"></span> party<span class="break"></span> member</d-text>
 	</d-box>
 
@@ -1759,7 +1759,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Not<span class="break"></span> so<span class="break"></span> useful</d-text>
 	</d-box>
 
@@ -1801,7 +1801,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 100HP</d-text>
 	</d-box>
 
@@ -1901,7 +1901,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Does<span class="break"></span> nothing</d-text>
 	</d-box>
 
@@ -1965,7 +1965,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 20HP</d-text>
 	</d-box>
 
@@ -2014,7 +2014,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 80HP</d-text>
 	</d-box>
 
@@ -2062,7 +2062,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 100HP</d-text>
 	</d-box>
 
@@ -2105,7 +2105,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 140HP</d-text>
 	</d-box>
 
@@ -2153,7 +2153,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Kris only<span class="break"></span> +400</d-text>
 	</d-box>
 
@@ -2204,7 +2204,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 115HP</d-text>
 	</d-box>
 
@@ -2251,7 +2251,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> 160HP</d-text>
 	</d-box>
 
@@ -2300,7 +2300,7 @@ credits: >
 	</d-box>
 
 	<h4>In battle</h4>
-	<d-box theme="objbattle">
+	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> All HP</d-text>
 	</d-box>
 
