Dummy encounter: Add ending marker for true ending

--- a/misc/combat/dummy.html
+++ b/misc/combat/dummy.html
@@ -679,6 +679,8 @@ god this page is messy as hell. feel free to clean it up
 		<d-text asterisk>I'm really happy I had the chance to teach you, Kris!</d-text>
 	</d-box>
 
+	<p class="note">The battle ends here.</p>
+
 	<hr>
 
 	<h3>When instructed to do something else</h3>
