Dummy encounter: Fix HR variant, misplaced section
Hug the Dummy repeats got placed under the Spare section fsr :(

--- a/misc/combat/dummy.html
+++ b/misc/combat/dummy.html
@@ -94,7 +94,7 @@ god this page is messy as hell. feel free to clean it up
 		<d-text asterisk>Ouch, it's OK, Kris! You're still learning!</d-text>
 	</d-box>
 
-	<hr>
+	<hr class="hr2">
 
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
@@ -609,9 +609,9 @@ god this page is messy as hell. feel free to clean it up
 		<d-text asterisk>You know what, that's fine! We don't need to fight!</d-text>
 	</d-box>
 
-	<h4>If you haven't DEFENDed before</h4>
+	<h5>If you haven't DEFENDed before</h5>
 	<p class="note">Proceeds to the <a href="#defendintrodummy">DEFEND introduction</a>.</p>
-	<h4>If you have DEFENDed before</h4>
+	<h5>If you have DEFENDed before</h5>
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
 		<d-text asterisk>Kris, if you didn't notice, when you DEFENDED before -</d-text>
@@ -621,6 +621,22 @@ god this page is messy as hell. feel free to clean it up
 		<d-text asterisk>The big orange TP bar on the left filled up a bit!</d-text>
 	</d-box>
 	<p class="note">Proceeds to the <a href="#magicintro">MAGIC introduction</a>.</p>
+
+	<h4>When instructed to SPARE</h4>
+	<h5>First time</h5>
+	<p>I.e. the second use of Hug overall.</p>
+	<d-box theme="battlemenu">
+		<d-sprite speaker="Ralsei" variant="hat" emotion="0"></d-sprite>
+		<d-text asterisk>That's great, Kris!</d-text>
+		<d-text asterisk>Just one hug is enough, though!</d-text>
+	</d-box>
+
+	<h5>Second time onwards</h5>
+	<p>Third Hug overall.</p>
+	<d-box theme="battlemenu">
+		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
+		<d-text asterisk>Kris, you don't need to hug it anymore.</d-text>
+	</d-box>
 </section>
 
 <section class="d-section" id="spare">
@@ -730,24 +746,6 @@ god this page is messy as hell. feel free to clean it up
 		<d-text asterisk>That's good enough for me!</d-text>
 	</d-box>
 	<p class="note">The battle ends here.</p>
-
-	<hr>
-
-	<h3>Hugging the Dummy again</h3>
-
-	<h4>Second time</h4>
-	<p>As in, second use of Hug overall.</p>
-	<d-box theme="battlemenu">
-		<d-sprite speaker="Ralsei" variant="hat" emotion="0"></d-sprite>
-		<d-text asterisk>That's great, Kris!</d-text>
-		<d-text asterisk>Just one hug is enough, though!</d-text>
-	</d-box>
-
-	<h4>Third time onwards</h4>
-	<d-box theme="battlemenu">
-		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
-		<d-text asterisk>Kris, you don't need to hug it anymore.</d-text>
-	</d-box>
 </section>
 
 <section class="d-section" id="hugralsei">
