Dummy encounter: Add credit

--- a/misc/combat/dummy.html
+++ b/misc/combat/dummy.html
@@ -20,7 +20,7 @@ sources:
     chapters: [1]
     note: manual setting of Tired
 credits: >
-  <p>Compiled by YOUR_NAME_HERE.</p>
+  <p>Compiled by wovenstarlight.</p>
 ---
 {% comment %}
 plot
