Misc index: Add section IDs

--- a/misc/index.html
+++ b/misc/index.html
@@ -3,7 +3,7 @@ title: Miscellaneous
 description: >
   <p>Pages that aren't story-specific or locked to a certain location.</p>
 ---
-<section class="d-section">
+<section class="d-section" id="possessions">
 	<h2>Possessions</h2>
 
 	<ul>
@@ -14,7 +14,7 @@ description: >
 	</ul>
 </section>
 
-<!-- <section class="d-section">
+<!-- <section class="d-section" id="events">
 	<h2>Events</h2>
 
 	<ul>
@@ -23,7 +23,7 @@ description: >
 	</ul>
 </section> -->
 
-<section class="d-section">
+<section class="d-section" id="interface">
 	<h2>Interface</h2>
 
 	<ul>
