Document unused text
Poor trapped soul :(

--- a/misc/index.html
+++ b/misc/index.html
@@ -33,6 +33,14 @@ description: >
 	</ul>
 </section>
 
+<section class="d-section" id="Other">
+	<h2>Other</h2>
+
+	<ul>
+		<li><a href="{{ '/misc/unusedtext' | relative_url }}">Unused text</a> found in the game files</li>
+	</ul>
+</section>
+
 <section class="d-section">
 	<p class="note">More to come...!</p>
 </section>
