DW Items: remove redundant usage clarifier in description, correct TV Dinner save slot # for Kris

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -2,7 +2,7 @@
 title: Dark World items
 description: >
   <p>Descriptions and usage/toss text for Dark World items.</p>
-  <p>Usage lists reactions when the item is used on a specific party member in the overworld, unless specified otherwise. Additional reactions from characters on whom the item is not being used occur only if that character is also in the party at time of use.</p>
+  <p>For overworld usage, reactions from characters on whom the item is not being used occur only if that character is also in the party at time of use.</p>
   <p>Usage messages including "[Character]" can substitute the names "Kris"/"Susie"/"Ralsei"/"Noelle", depending on who the item was used on.</p>
   <p>Any heal amounts listed on this page are the base values, not adjusted by heal-buffing equipment like the Blue Ribbon.</p>
 sources:
@@ -1811,7 +1811,7 @@ credits: >
 	<p class="note">Heals 100 HP.</p>
 
 	<h4>Kris</h4>
-	<h5>Save slot 1</h5>
+	<h5>Save slot 2</h5>
 	<d-box theme="objreact">
 		<d-speaker>Noelle</d-speaker>
 		<d-text>What are you, a unicorn? Faha.</d-text>
