Move "Unused text" to UNUSED
Actual unused strings might merit their own page later. UNUSED all caps is its own special thing

--- a/misc/unused.html
+++ b/misc/unused.html
@@ -1,5 +1,5 @@
 ---
-title: Unused text
+title: UNUSED
 
 description: >
   <p>Strings of text that appear in the game but are deliberately unused, as the file in question is never referenced elsewhere.</p>
